# OpenSoftRenderer

./: CMakeLists.txt  README.md  main.cpp
include/: Application.h  Camera.h  Geometry.h  Loader.h  Model.h  Renderer.h  Shader.h  Uniform.h  World.h
src/: Application.cpp  Camera.cpp  Geometry.cpp  Loader.cpp  Model.cpp  Renderer.cpp  Shader.cpp  World.cpp
